--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -115,7 +115,7 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   .card,
   .footer {
     border-color: #222;
@@ -126,9 +126,35 @@
   .logo img {
     filter: invert(1);
   }
-}
+} */
 
 .map {
   width: 100%;
   height: 40rem;
+}
+
+.header {
+  background-color: white;
+  width: 100%;
+  height: 75px;
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: solid 6px #005DAA;
+}
+
+.logo {
+  width: 200px;
+  height: inherit;
+  padding: 0.5em;
+  position: absolute; left: 0;
+  object-fit: contain;
+  object-position: 0;
+}
+
+.title {
+  font-size: 1.5em;
+  font-weight: 500;
+  color: #005DAA;
 }
