--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,7 +7,7 @@
   background-color: white;
   width: 100%;
   height: 75px;
-  padding: 1em;
+  padding: 1.5em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,7 +17,8 @@
 .logo {
   width: 200px;
   height: inherit;
-  padding: 0.5em;
+  padding: 1em;
+  padding-left: 1.5em;
   position: absolute; left: 0;
   object-fit: contain;
   object-position: 0;
