--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,16 @@
+.main {
+  background-color: #eeeeee;
+}
+
 .map {
   width: 100%;
   height: 40rem;
+}
+
+.mapcont {
+  padding: 5em;
+  padding-left: 8em;
+  padding-right: 8em;
 }
 
 .header {
